# CV

./: .gitignore  Dockerfile  ISSUE_BODY.txt  README.md  build.sh  clean.sh  cv.tex  cv.tex.j2  data.yml  dissertations.bib  issue-details.json  latex_jinja_applier.py  make.cmd  publications.bib  pyproject.toml  review.bib  treports.bib
.devcontainer/: devcontainer.json
.github/actions/docker-run/: action.yml
.github/actions/setup-steps/: action.yml
.github/workflows/: ai-handle-issue.yml  ai-pr.yml  ai-update-pr.yml  docker-build-push.yml  docker-run.yml  release.yml  setup-steps.yml  update-bibliography.yml  update-scholar-stats.yml
bibscraper/: __init__.py  cli.py  updater.py
bibscraper/merger/: __init__.py  bibtex_merger.py  similarity.py
bibscraper/scraper/: __init__.py  scholar.py  web.py
bibscraper/utils/: __init__.py  bibtex.py  changelog.py
scripts/: bib-merge  bib-scrape  bib-update  cli  run.sh
